# ScaleStore

./: CMakeLists.txt  README.md  alloc_improvement_lat-2rp.txt  client_config.json  free_improvement_lat-2rp.txt  server_config.json
crash-recover-test/: test_crash_client.cc
micro-test/: latency_test.cc  micro_test.cc  micro_test.h  micro_test_multi_client.cc
mm-test/: CMakeLists.txt  latency_test.cc  latency_test_client.cc  micro_test.cc  micro_test.h  mm_latency_test.cc  mm_latency_test.h  mm_latency_test_client.cc  mm_test.cc  mm_test.h  mm_test_multi_client.cc  mm_test_server.cc
results/: alloc_baseline_lat-2rp.txt  free_baseline_lat-2rp.txt
src/: CMakeLists.txt  client.cc  client.h  client_cr.cc  client_cr.h  client_fmm.cc  client_fmm.h  client_mm.cc  client_mm.h  hashtable.cc  hashtable.h  ib.cc  ib.h  kv_utils.cc  kv_utils.h  master.cc  master.h  nm.cc  nm.h  server.cc  server.h  server_mm.cc  server_mm.h
tests/: client_kv_shell.cc  test_client_client.cc
ycsb-test/: CMakeLists.txt  split-workload.py  ycsb_latency_multi_client.cc  ycsb_latency_multi_client_cr.cc  ycsb_latency_test.cc  ycsb_latency_test_cr.cc  ycsb_server_crash_client.cc  ycsb_server_crash_multi_client.cc  ycsb_test.cc  ycsb_test.h  ycsb_test_client_cr.cc  ycsb_test_multi_client.cc  ycsb_test_multi_client_cr.cc  ycsb_test_server.cc
